# enbu

./: .gitignore  .goreleaser.yaml  .taplo.toml  AGENTS.md  README.ja.md  README.md  Taskfile.yaml  action.yaml  aqua.yaml  compose.yaml  enbu.schema.json  go.mod  go.sum  index.html  main.go  main_test.go
.github/: dmg-settings.py
age/: age_test.go  keygen.go
app/: app.go  cache.go  cache_test.go  config.go  config_test.go  environments.go  environments_test.go  export.go  export_test.go  helpers.go  helpers_test.go  history.go  history_test.go  init.go  interfaces.go  progress_test.go  recipients.go  recipients_test.go  replace_file_unix.go  replace_file_windows.go  replace_file_windows_test.go  secrets.go  secrets_test.go
assets/: assets.go
auth/: browser.go  browser_test.go  code_flow.go  device_flow.go  device_flow_test.go  oauth.go  oauth_test.go  token_store.go  token_store_legacy_test.go  token_store_test.go
bundle/: bundle_test.go
cli/: add.go  add_edit_test.go  app.go  auth.go  auth_test.go  delete.go  delete_test.go  edit.go  env_test.go  export.go  gui.go  gui_test.go  history.go  init.go  init_test.go  mock_test.go  pull.go  service_test.go  switch.go  switch_test.go  sync.go  sync_test.go  tui_cmd.go  ui.go
config/: config.go  config_test.go  gui.go  gui_test.go
desktop/: repo.go  service.go  service_test.go
docs/: policy.md
keystore/: keystore.go
oci/: tag_test.go  util.go
policy/: policy.go  policy_test.go
pr-31/: index.html
scripts/: generate_release_notes.py  pyproject.toml
scripts/tests/: test_generate_release_notes.py
(+409 files in other folders)
